# ecc

./: .gitignore  Cargo.toml  Makefile.toml  README.md  mise.toml  pyproject.toml  pyrightconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  rust-doc.yml
src/: curve.rs  field.rs  lib.rs  point.rs
src/client/: __init__.py  core.py
src/protocols/: diffie_hellman.rs  elgamal.rs  mod.rs
stubs/client/: _rust.pyi
tests/: test_curve.py
